--- a/ribot_calibration/calibration/config.yml
+++ b/ribot_calibration/calibration/config.yml
@@ -35,7 +35,7 @@
 description_file: "package://ribot_description/urdf/robot.urdf.xacro"
 
 # The calibration framework requires a bagfile to extract the necessary data for the calibration.
-bag_file: "$ROS_BAGS/ribot/test.bag"
+bag_file: "$ROS_BAGS/ribot/ribot1.bag"
 
 # You must define a frame of reference for the optimization process.
 # It must exist in the transformation chains of all the sensors which are being calibrated.
