--- a/ribot_calibration/calibration/config.yml
+++ b/ribot_calibration/calibration/config.yml
@@ -70,7 +70,7 @@ sensors:
   #   /world_camera/rgb/image_raw
   #
 
-  right_camera:
+  rgb_right:
     link: "rgb_right_optical_frame"
     parent_link: "plate"
     child_link: "rgb_right_link"
